# template-langgraph

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  elasticsearch.Dockerfile  index.html  langgraph.Dockerfile  langgraph.json  mkdocs.yml  n8n.docker-compose.yml  n8n.env.template  observability.docker-compose.yml  otel-collector-config.yaml  pyproject.toml  sitemap.xml  test_message_structure.py  test_multiturn_mock.py  test_parallel_rag_agent.py
.devcontainer/: devcontainer.json
.github/: labeler.yaml
.github/workflows/: azure-static-web-app.yaml  docker-release.yaml  docker.yaml  ghcr-release.yaml  github-pages.yaml  labeler.yaml  news_summarizer_agent.yaml  post_summary_to_slack.yaml  test.yaml
data/: chat_model.optimized.json  docs_kabuto.md  init.sql  qa_kabuto.csv  reports_kabuto.csv
deployment/: index.html
development/: index.html
docs/: deployment.ja.md  deployment.md  development.ja.md  development.md  faq.ja.md  faq.md  index.ja.md  index.md  references.ja.md  references.md
faq/: index.html
ja/: index.html
ja/deployment/: index.html
ja/development/: index.html
ja/faq/: index.html
ja/references/: index.html
notebooks/: chat_with_tools.ipynb  chat_with_tools_agent.ipynb  image_classifier_agent.ipynb  issue_formatter_agent.ipynb  kabuto_helpdesk_agent.ipynb  news_summarizer_agent.ipynb  supervisor_agent.ipynb  task_decomposer_agent.ipynb
references/: index.html
scripts/: agent_operator.py  ai_search_operator.py  azure_ai_foundry_operator.py  azure_openai_operator.py  checkpoint_operator.py  cosmosdb_operator.py  demo_agents_operator.py  dify_operator.py  draw_mermaid_png.py  dspy_operator.py  elasticsearch_operator.py  graph_runner.py  mcp_operator.py  mlflow_operator.py  ollama_operator.py  otel_operator.py  postgresql_operator.py  qdrant_operator.py  realtime_operator.py  realtime_webrtc.html  simple_multi_agent_operator.py  sound_operator.py  template.py  test_all.sh
search/: search_index.json
template_langgraph/: loggers.py
template_langgraph/agents/: kabuto_helpdesk_agent.py  supervisor_agent.py
template_langgraph/agents/basic_workflow_agent/: agent.py  models.py
template_langgraph/agents/chat_with_tools_agent/: agent.py  models.py
template_langgraph/agents/demo_agents/: multi_agent.py  research_deep_agent.py  weather_agent.py
template_langgraph/agents/demo_agents/deep_agent_core/: __init__.py  graph.py  prompts.py  research_agent.py  state.py  sub_agent.py  tools.py
template_langgraph/agents/demo_agents/parallel_processor_agent/: agent.py  models.py
template_langgraph/agents/demo_agents/parallel_rag_agent/: agent.py  models.py
template_langgraph/agents/image_classifier_agent/: agent.py  classifiers.py  models.py
template_langgraph/agents/issue_formatter_agent/: agent.py  models.py
template_langgraph/agents/kabuto_helpdesk_agent/: agent.py
template_langgraph/agents/news_summarizer_agent/: agent.py  models.py  scrapers.py  summarizers.py
template_langgraph/agents/simple_multi_agent/: multi_agent.py
template_langgraph/agents/supervisor_agent/: agent.py
template_langgraph/agents/task_decomposer_agent/: agent.py  models.py
template_langgraph/internals/: notifiers.py  otel_helpers.py  scrapers.py  summarizers.py
template_langgraph/internals/dspys/: modules.py  utilities.py
template_langgraph/internals/models/: image_analysis.py
template_langgraph/llms/: azure_ai_foundrys.py  azure_openais.py  foundry_locals.py  ollamas.py
template_langgraph/mcps/: math_server.py
template_langgraph/services/fastapis/: main.py
template_langgraph/services/fastapis/routers/: agents.py
template_langgraph/services/streamlits/: main.py
template_langgraph/services/streamlits/pages/: chat_langchain.py  chat_playground.py  (+7 more)
template_langgraph/speeches/: stt.py  tts.py
template_langgraph/tasks/: add_documents_to_elasticsearch.py  add_documents_to_qdrant.py  delete_qdrant_collection.py  draw_basic_workflow_agent_mermaid_png.py  draw_chat_with_tools_agent_mermaid_png.py  run_basic_workflow_agent.py  run_chat_with_tools_agent.py  run_issue_formatter_agent.py  run_kabuto_helpdesk_agent.py  search_documents_on_elasticsearch.py  search_documents_on_qdrant.py
template_langgraph/tools/: ai_search_tool.py  common.py  cosmosdb_tool.py  csv_loaders.py  dify_tool.py  elasticsearch_tool.py  fabric_data_agent_tool.py  mcp_tool.py  pdf_loaders.py  postgresql_tool.py  qdrant_tool.py  qdrants.py  sql_database_tool.py
tests/: test_azure_openais.py  test_core.py  test_loggers.py  test_settings.py
tests/internals/: test_csv_loaders.py  test_pdf_loaders.py
tests/utilities/: test_csv_loaders.py  test_pdf_loaders.py
(+6 files in other folders)
